[gpu/GLES2DecoderImpl] Force updating scissor state on Nexus 7 gen.2

Nexus 7 gen.2 shipped with some buggy GPU driver that can have stale
scissor state after switching current framebuffer to FBO0.

The theory is that FBO0 keeps some internal (in HW regs maybe?) scissor test
state, but the driver forgets to update it with GL_SCISSOR_TEST when FBO0 gets
bound. (So it stuck with whatever state we last switched from it.)

Also the state could stuck even if we explicitly set GL_SCISSOR_TEST again
after switching to FBO0, because the driver early exits if the new
GL_SCISSOR_TEST value matches the old one.

This CL add a workaround in GLES2DecoderImpl to shake up the scissor state
whenever we just switched to FBO0.

BUG=670607
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2655073008
Cr-Commit-Position: refs/heads/master@{#446894}

Former-commit-id: 1870af92713b4c2eefd45312b7cf9c5c18477f59